@@ -12,14 +12,15 @@ class EntryLinkColumn extends CDataColumn
     protected function renderDataCellContent($row, $data)
     {
         $url = array('entry/update',
-            'id' => $data->id,
+            'id'        => $data->id,
+            'returnUrl' => Yii::app()->request->requestUri
         );
         $htmlOptions = array(
             'class' => 'update-entry',
             'data-reveal-id' => 'entry-form-modal',
             'rel'   => CHtml::normalizeUrl(array('entry/getData',
-                'id'             => $data->id,
-                'withPassword'   => 1,
+                'id'           => $data->id,
+                'withPassword' => 1
             )),
         );
 
