@@ -5,6 +5,7 @@ Version 0.6.0 (unreleased)
 --------------------------
 - Issue #70: Added import for PhpPasswordManager
 - Issue #68: Simplified code of setup routine
+- Issue #56: Added `returnUrl`-param to `entry/update` and `tag/update`
 - Issue #52: Entry name on `entry/index` is a link now
 - Issue #51: Added default order for `entry/index` and `tag/index`
 - Issue #46: Added support for alternate database host port
